
  * DistUpgrade/DistUpgradeQuirks.py:
    - fixup internal (ed) based patching tool
  * DistUpgrade/patches/
    - add pycompile patch to ensure clean upgrade even when maverick-updates
      is not available
  * AutoUpgradeTester/profile/server/DistUpgrade.cfg:
    - updated for maverick
  * DistUpgrade/DistUpgradeCache.py:
    - minor python-apt 0.8 API update

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 16:27:43 +0100

update-manager (1:0.145.9) natty; urgency=low

  * fix FTBFS
  * improve install-backend error checking

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Dec 2010 15:55:39 +0100

update-manager (1:0.145.8) natty; urgency=low

  * remove update-manager-hildon

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Dec 2010 16:13:20 +0100

update-manager (1:0.145.7) natty; urgency=low

  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - updated for aptdaemon 0.40
  * merged lp:~alexlauni/update-manager/dbus, many thanks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 07 Dec 2010 15:13:20 +0100

update-manager (1:0.145.6) natty; urgency=low

  * debian/rules:
    - build with --skip-private, otherwise dh_python2 will generate
      a incorrect maintainer script for the auto-upgrade-tester package
      that contains a invalid version range string

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 03 Dec 2010 10:22:03 +0100

update-manager (1:0.145.5) natty; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeViewText.py:
    - start with gnu screen integration
  * DistUpgrade/DistUpgradeController.py:
    - when starting a additional sshd detect if there is a firewall
      running and if so print information that the additional sshd
      may need to be added to the firewall rules
  * UpdateManager/Core/utils.py:
    - add iptables_active() helper
  * merged lp:~brian-murray/update-manager/has-completed, many thanks
    This fixes issues with the English past tense