@@ -8,7 +8,7 @@
 #
 
 # the codename is AUTO-GENERATED from the build-host relase codename
-CODENAME=lucid
+CODENAME=natty
 UPGRADER_DIR=dists/$CODENAME/main/dist-upgrader/binary-all/
 
 # this script can be called in three ways:
