@@ -1,1 +1,1 @@
-/^Hello/d;
+1d
