@@ -9,6 +9,8 @@ update-manager (1:0.145.10) UNRELEASED; urgency=low
     - updated for maverick
   * DistUpgrade/DistUpgradeCache.py:
     - minor python-apt 0.8 API update
+  * tests/patchdir/_patchdir_foo.f41121a903eafadf258962abc57c8644:
+    - update test for latest internal patching tool
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 16:27:43 +0100
 
